2007-05-17  Taiki Yamaguchi  <yamaguchi@sraoss.co.jp>

	* Support HBA authentication.
	* Support log_connections
	* Support log_hostname
	* Support "ps" status display
	* sample/pgpool.pam: PAM service configuration file. It will be
	  installed to "$PREFIX/share/pgpool-II/"
	* doc/pgpool-ja.html: Added pool_hba description.
	* doc/pgpool-en.html: Added pool_hba description.

2007-04-26  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_connection_pool.c: Retry connect() when it is interrupted
	  by signal.

2007-04-20  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Enhance that the query that begins with
	  "SELECT nextval()" or "SELECT setval()" are always replicated
	  under replication mode. Then, SELECT statements are only
	  executed by MASTER node if load_balance_mode is false. If need
	  to replicate select statement, add a comment in the begining of
	  the query.

2007-03-01  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* pool_process_query.c: Support load balancing with extended
	  protocol.

2007-03-01  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* parser/Makefile.am, parser/copyfuncs.c: Porting deep copy
	  functions for tree nodes from PostgreSQL.

2007-02-28  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Makefile.am: Use libtool's -rpath option instead of ld's rpath
	  option. Because rpath option name is platform-dependent.

2007-02-16  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Makefile.am, configure.in, pool_connection_pool.c,
	  pool_query_cache.c, pcp/pcp.c, pcp/pcp_stream.c: Fixed compile
	  error on MacOS X. MacOS's ld does not have rpath option. So add
	  --disable-rpath option to configure for MacOS X.

2007-02-13  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* Version 1.0.2

2007-02-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* doc/pgpool-ja.html: Add release note.

2007-02-12  Yoshiyuki Asaba  <y-asaba@sraoss.co.jp>

	* doc/pgpool-ja.html: Add Japanese release note into
	  pgpool-ja.html.
